Simplify simulator development workflow
